# Cutie

./: hubconf.py  pyproject.toml
cutie/: __init__.py
cutie/config/: eval_config.yaml  inference_config.yaml
cutie/inference/: __init__.py  assignment.py  detic_demo.py  download_models.py  inference_core.py  object_info.py  object_manager.py
gui/: main_controller.py
scripts/: masks_to_video.py  remap_ids.py
