[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "cutie"
version = "1.0.0"
authors = [{ name = "Rex Cheng", email = "hkchengrex@gmail.com" }]
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  'numpy >= 1.21',
  'scipy >= 1.7',
  'hydra-core >= 1.3.2',

  # download models
  'requests',
  'tqdm >= 4.66.1',
]
[tool.poetry.extras]
gui = [
  # ritm
  'easydict',
  'cython',

  # gui
  'opencv-python >= 4.8',
  'Pillow >= 9.5',
  'PySide6 >= 6.2.0',
  'pyqtdarktheme',
  'gradio >= 3.34',

  # scripts
  'av >= 0.5.2',

  # training
  'pycocotools >= 2.0.7',
  'einops >= 0.6',
  'thinplate@git+https://github.com/cheind/py-thin-plate-spline',
  'tensorboard >= 2.11',
  'hickle >= 5.0',

  # idk
  'gdown >= 4.7.1',
  'charset-normalizer >= 3.1.0',
  'cchardet >= 2.1.7',
  'gitpython >= 3.1',
  'netifaces >= 0.11.0',

]


[project.urls]
"Homepage" = "https://github.com/hkchengrex/Cutie"
"Bug Tracker" = "https://github.com/hkchengrex/Cutie/issues"
